# arbitrage_bot

./: .gitignore  ASSISTANT_ONBOARDING.md  ASSISTANT_PROGRESS_TRACKER.md  CONTRIBUTING.md  CURRENT_CONTEXT.md  DEPLOYMENT.md  DEVELOPMENT_INSIGHTS.md  DOCUMENT_INDEX.md  HANDOFF.md  MAINNET_WALLET.json  MANIFEST.in  PROJECT_STRUCTURE.md  QUICK_START_GUIDE.md  README.md  arbitrage_bot.db  arbitrage_bot.py  arbitrage_bot.pyproj  arbitrage_bot.sln  config.example.json  config.json  config.py  config.yaml  config.yaml.old  deploy.py  execute_test_trade.py  fewAWF  frontmatter.json  hardhat.config.js  opportunity_analysis.json  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_BACKUP_1748.txt  requirements_BASE_1748.txt  requirements_LOCAL_1748.txt  run.py  run_dashboard.py  run_price_monitor.py  setup.cfg  (+9 more)
.github/: dependabot.yml  pull_request_template.md
abi/: ArbitrageBot.json  ArbitrageFactory.json  DEXRegistry.json  ERC20.json  IUniswapV2Router.json  IUniswapV3Factory.json  IUniswapV3Pool.json  IUniswapV3Quoter.json  IUniswapV3QuoterV2.json  MockPriceFeed.json  MultiPathArbitrage.json  PathFinder.json  PriceFeedIntegration.json  PriceFeedRegistry.json  QuoteManager.json  aerodrome_pool.json  balancer_pool_registry.json
cline_docs/: activeContext.md
configs/: CONFIG_STRUCTURE.md  README.md  SETUP_GUIDE.md  Untitled-1.py  config_loader.py  dex_config.json  local.template.json  logging_config.py  performance_optimized_loader.py  quick_config_loader.py  template.json
contracts/: ArbitrageBot.sol  CrossChainAtomicSwap.sol  MockPriceFeed.sol  README.md
dashboard/: .env.sepolia.template  DEBUG_NOTES.md  DEPLOYMENT_NOTES.md  DEVELOPMENT_NOTES.md  FRONTEND_IMPLEMENTATION.md  PROGRESS_SUMMARY.md  README.md  SESSION_TRACKING.md  __init__.py  advanced_arbitrage_detector.py  advanced_dashboard.py  advanced_ml.py  advanced_rl.py  app.py  (+53 more)
(+299 files in other folders)
